# PyUpdater

./: .flake8  .gitignore  Makefile  pyproject.toml  setup.cfg  tox.ini  versioneer.py
pyupdater/: __init__.py  __main__.py  _version.py  settings.py
pyupdater/cli/: __init__.py  commands.py  helpers.py  options.py
pyupdater/client/: __init__.py  downloader.py  patcher.py  updates.py
pyupdater/core/: __init__.py  uploader.py
pyupdater/core/key_handler/: __init__.py  keys.py
pyupdater/core/package_handler/: __init__.py  package.py  patch.py
pyupdater/utils/: __init__.py  builder.py  config.py  exceptions.py  pyinstaller_compat.py  storage.py  version.py
working/: working.py
