[project]
name = 'pyupdater'
version = '4.1.0'
description = 'Fork of PyUpdater'
authors = [
    { name = 'Jayme Gordon', email = 'jaymegordo@gmail.com' }
]
license = 'MIT'
requires-python = '>=3.11,<3.14'
dependencies = [
    'appdirs>=1.4.4',
    'bsdiff4>=1.2.1',
    'certifi>=2021.5.30',
    'dsdev-utils>=1.3.0',
    'pyinstaller>=5.0.0,<6.0.0',
    'PyNaCl>=1.4.0',
    'stevedore<4.0',
    'urllib3<2.0',
]
readme = 'README.md'
keywords = [
    'PyUpdater',
    'Pyinstaller',
    'Auto Update',
    'AutoUpdate',
    'Auto-Update',
    'Esky',
    'updater4pyi',
    'bbfreeze',
    'ccfreeze',
    'freeze',
    'cz_freeze',
    'pyupdate',
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
]

[project.optional-dependencies]
s3 = ['PyUpdater-s3-Plugin>=4.0.5']
scp = ['PyUpdater-scp-Plugin>=4.0']
all = ['PyUpdater-s3-Plugin>=4.0.5', 'PyUpdater-scp-Plugin>=4.0']

[project.scripts]
pyupdater = 'pyupdater.cli:main'

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['pyupdater*']
exclude = ['dev*', 'tests*']

[dependency-groups]
dev = [
    'autopep8>=2.3.2',
    'pre-commit>=4.2.0',
    'ruff>=0.11.0',
]

[tool.uv]
default-groups = ['dev']

[tool.uv.sources]
dsdev-utils = { git = 'https://github.com/Digital-Sapphire/dsdev-utils.git' }

[tool.ruff]
line-length = 120
ignore = ['E713', 'E714', 'E722', 'E731', 'F405', 'F841']

[tool.pyright]
ignore = ['pyupdater', 'tests', 'dev']
reportWildcardImportFromLibrary = 'none'
reportUnboundVariable = 'information'
reportMissingImports = 'information'
reportGeneralTypeIssues = 'information'
reportOptionalIterable = 'none'
reportOptionalMemberAccess = 'information'
reportOptionalSubscript = 'information'
reportInvalidStringEscapeSequence = 'information'
